--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,15 +48,15 @@ header {
 /* Scroll Bar */
 ::-webkit-scrollbar{
     width: .60rem;
-    background-color: $scroll-bar-color;
+    background-color: $scroll-background-color;
     border-radius: .5rem;
 }
 
-::-webkit-scrollbar-thumb{
-    background-color: $scroll-thumb-color;
+::-webkit-scrollbar-bar{
+    background-color: $scroll-bar-color;
     border-radius: .5rem;   
 }
 
-::-webkit-scrollbar-thumb:hover{
-    background-color: $scrollbar-thumb-hover;
+::-webkit-scrollbar-bar:hover{
+    background-color: $scrollbar-bar-hover;
 }
